# taskflow

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  ruff.toml  run.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/core/: README.md  __init__.py  config.py  database.py  security.py  seed.py  sse.py
backend/app/models/: README.md  __init__.py  base.py  models.py
backend/app/routers/: README.md  __init__.py  auth.py  projects.py
backend/app/schemas/: README.md  auth.py
backend/app/services/: README.md
backend/tests/: README.md  conftest.py  pytest.ini  test_api.py
frontend/: Dockerfile  index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: api.ts
frontend/src/components/: KanbanBoard.tsx  KanbanColumn.tsx  Login.tsx  ProjectDrawer.tsx  ProjectList.tsx  StatsDrawer.tsx  TaskCard.tsx  TaskDrawer.tsx  TaskForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/types/: index.ts
